# PW_HW_8.1_8.2

./: README.md  load.py  models.py  mongo_note.py  pyproject.toml  search.py
module8,2/: config.ini  consumer.py  models.py  producer.py
